refactor: map structure